--- a/NetTaskServer/NLog.Config
+++ b/NetTaskServer/NLog.Config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog autoReload="true" internalLogLevel="Off" internalLogFile="Logs/internalLog.txt">
     <targets>
-        <target type="File" name="info" fileName="${basedir}/Logs/${logger}/info/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
-        <target type="File" name="err" fileName="${basedir}/Logs/${logger}/error/${shortdate}.log" layout="==========================${longdate}======================${newline}${uppercase:${level}} ${message}${newline}${exception:format=ToString}${newline}==========================${newline}${newline}" />
+        <target type="File" name="info" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/info/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+        <target type="File" name="err" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/error/${shortdate}.log" layout="==========================${longdate}======================${newline}${uppercase:${level}} ${message}${newline}${exception:format=ToString}${newline}==========================${newline}${newline}" />
         <target type="Console" name="console"  layout="${longdate} ${uppercase:${level}} ${message}" />
     </targets>
     <rules>
