--- a/NetTaskServer/NetTaskServer.csproj
+++ b/NetTaskServer/NetTaskServer.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="dockerfile" />
     <None Remove="NLog.Config" />
     <None Remove="Web\assembly.html" />
     <None Remove="Web\assembly.js" />
@@ -57,6 +58,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="dockerfile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="NLog.Config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
