fixed docker bug

--- a/NetTaskServer/NetTaskServer.csproj
+++ b/NetTaskServer/NetTaskServer.csproj
@@ -61,7 +61,7 @@
     <Content Include="dockerfile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="NLog.Config">
+    <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web\assembly.html">
