--- a/NetTaskServer/NLog.Config
+++ b/NetTaskServer/NLog.Config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog autoReload="true" internalLogLevel="Off" internalLogFile="Logs/internalLog.txt">
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
-        <target type="File" name="info" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/info/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
-        <target type="File" name="err" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/error/${shortdate}.log" layout="==========================${longdate}======================${newline}${uppercase:${level}} ${message}${newline}${exception:format=ToString}${newline}==========================${newline}${newline}" />
-        <target type="Console" name="console"  layout="${longdate} ${uppercase:${level}} ${message}" />
+        <target xsi:type="File" name="info" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/info/${shortdate}.log" layout="${longdate} ${uppercase:${level}} ${message}" />
+        <target xsi:type="File" name="err" fileName="${basedir}/Logs/${event-context:item=assembly}/${logger}/error/${shortdate}.log" layout="==========================${longdate}======================${newline}${uppercase:${level}} ${message}${newline}${exception:format=ToString}${newline}==========================${newline}${newline}" />
+        <target xsi:type="Console" name="console"  layout="${longdate} ${uppercase:${level}} ${message}" />
     </targets>
     <rules>
         <logger name="*" minlevel="Debug" writeTo="console" />
