--- a/NetTaskServer/NetTaskServer.csproj
+++ b/NetTaskServer/NetTaskServer.csproj
@@ -45,6 +45,8 @@
     <None Remove="Web\logo.png" />
     <None Remove="Web\logs.html" />
     <None Remove="Web\logs.js" />
+    <None Remove="Web\mail.html" />
+    <None Remove="Web\mail.js" />
     <None Remove="Web\main.html" />
     <None Remove="Web\main.js" />
     <None Remove="Web\NSmartProxyNew.png" />
@@ -133,6 +135,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web\logs.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Web\mail.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Web\mail.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Web\main.html">
